<resources>
    <string name="app_name">Calculator</string>
    <string name="button">Button</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_equals">=</string>
    <string name="_0">0</string>
    <string name="_clear">clear</string>
    <string name="_divide">/</string>
    <string name="_into">*</string>
    <string name="_add">+</string>
    <string name="_minus">-</string>
    <string name="welcome_to_the_jungle">Welcome to the Jungle!!</string>
</resources>